--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seeder": "tsc seeder/seeder.ts --outDir .temp && node ./.temp/seeder/seeder.js && rm -rf .temp"
   },
   "dependencies": {
+    "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-connect": "^1.0.0",
     "react": "^18",
