--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seeder": "tsc seeder/seeder.ts --outDir .temp && node ./.temp/seeder/seeder.js && rm -rf .temp"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-connect": "^1.0.0",
