--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "seeder": "tsc seeder/seeder.ts --outDir .temp && node ./.temp/seeder/seeder.js && rm -rf .temp"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
-    "mongoose": "^8.3.4",
+    "cloudinary": "^2.2.0",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-connect": "^1.0.0",
+    "node-geocoder": "^4.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-js-pagination": "^3.0.2",
+    "react-redux": "^9.1.2",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-star-ratings": "^2.3.3",
     "typescript": "^5"
   }
 }
