--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
-
-# global env files
-*.config.mjs
+*.env
 
 # vercel
 .vercel
