--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.2.0",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
