--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
