--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
+    "moment-range": "^4.0.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
